# llm-rag

./: README.md  pyproject.toml
.github/agents/: rag-exports.agent.md  toml-experts.agent.md
.github/skills/python-toml-project/: SKILL.md
src/llm_rag/: __init__.py  api.py  config.py  embedding.py  generation.py  main.py  mongo-db-connect.py  pipeline.py  retrieval.py  vector_store.py
tests/: test_main.py
