[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "llm_rag"
version = "0.1.0"
description = "LLM RAG application"
authors = ["binay rai <binaychap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pypdf = "^4.3.1"
pandas = "^2.0.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pymongo = "^4.6.0"
sentence-transformers = "2.2.2"
huggingface-hub = "0.16.4"
numpy = "^1.24.0"
openai = "^1.3.0"
torch = "2.0.0"
tokenizers = "^0.15.0"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["src"]